--- a/src/app/articles/crafting-a-design-system-for-a-multiplanetary-future/page.mdx
+++ b/src/app/articles/crafting-a-design-system-for-a-multiplanetary-future/page.mdx
@@ -1,6 +1,8 @@
 import { ArticleLayout } from '@/components/ArticleLayout'
 import designSystem from './planetaria-design-system.png'
 
+export const runtime = 'edge';
+
 export const article = {
   author: 'Adam Wathan',
   date: '2022-09-05',
